--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/gi0baro/emmett-mongorest"
 
 keywords = ["mongodb", "rest", "web", "emmett"]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Environment :: Web Environment",
     "Framework :: AsyncIO",
     "Intended Audience :: Developers",
@@ -29,13 +29,15 @@ packages = [
     {include = "tests", format = "sdist"}
 ]
 include = [
-    "LICENSE"
+    "LICENSE",
+    "emmett_rest/assets/**/*"
 ]
 
 [tool.poetry.dependencies]
 python = "^3.7"
 emmett_mongo = { git = "https://github.com/gi0baro/emmett-mongo.git", rev = "68b33fd", allow-prereleases = true }
 emmett_rest = "~1.0.0"
+markdown2 = "~2.3.8"
 pydantic = "1.4"
 
 [tool.poetry.dev-dependencies]
